VSE: Blender 4.0 crashes when trying to render scene strips #114982

Closed
opened 2023-11-16 12:08:39 +01:00 by Renan-Kogut · 6 comments

System Information
Operating system: Windows 10 Pro
Graphics card: Nvidia GeForce GTX 1070

Blender Version
Broken: 4.0.0, branch: blender-v4.0-release, 2023-11-15
Worked: 3.6.5 LTS

Short description of error
New Blender 4.0 crashes when trying to use "Sequence Render Animation" button from inside VSE View Options. The same scene perfectly worked in 3.6.5 LTS.

Exact steps for others to reproduce the error
Blend file attached (created in 3.6.5) with a simple 3 scenes setup. Go to the VSE scene, Video Editing tab, View > Sequence Render Animation. In version 3.6.5 works perfectly. However in 4.0 it crashes.

**System Information** Operating system: Windows 10 Pro Graphics card: Nvidia GeForce GTX 1070 **Blender Version** Broken: 4.0.0, branch: blender-v4.0-release, 2023-11-15 Worked: 3.6.5 LTS **Short description of error** New Blender 4.0 crashes when trying to use "Sequence Render Animation" button from inside VSE View Options. The same scene perfectly worked in 3.6.5 LTS. **Exact steps for others to reproduce the error** Blend file attached (created in 3.6.5) with a simple 3 scenes setup. Go to the VSE scene, Video Editing tab, View > Sequence Render Animation. In version 3.6.5 works perfectly. However in 4.0 it crashes.
980 KiB
Renan-Kogut added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-16 12:08:40 +01:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added this to the Video Sequencer project 2023-11-16 12:18:52 +01:00
Philipp Oeser added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-11-16 12:19:03 +01:00
Philipp Oeser removed this from the Video Sequencer project 2023-11-16 12:19:40 +01:00
Philipp Oeser added the
Module
VFX & Video
Interest
Video Sequencer
labels 2023-11-16 12:19:53 +01:00
Member

Caused by b1526dd2c6

Seems seq_render_scene_strip is now taking the "wrong" code path.

1  seq_render_scene_strip         render.cc          1594 0x734f8f4 
2  do_render_strip_uncached       render.cc          1719 0x73514c6 
3  seq_render_strip               render.cc          1793 0x7351a81 
4  seq_render_strip_stack         render.cc          1913 0x7352bb8 
5  SEQ_render_give_ibuf           render.cc          2015 0x7353fef 
6  screen_opengl_render_apply     render_opengl.cc   472  0x9e12694 
7  screen_opengl_render_anim_step render_opengl.cc   1180 0x9e1ea73 
8  screen_opengl_render_modal     render_opengl.cc   1238 0x9e1f5f7 
9  wm_handler_operator_call       wm_event_system.cc 2480 0x42cd7ef 
10 wm_handlers_do_intern          wm_event_system.cc 3400 0x42ddc51 
11 wm_handlers_do                 wm_event_system.cc 3450 0x42de28a 
12 wm_event_do_handlers           wm_event_system.cc 4077 0x42e87d4 
13 WM_main                        wm.cc              613  0x4297dc3 
14 main                           creator.cc         594  0x876069  

CC @iss

Caused by b1526dd2c6a58bccc5a1fb60403851cdba8edfaf Seems `seq_render_scene_strip` is now taking the "wrong" code path. ``` 1 seq_render_scene_strip render.cc 1594 0x734f8f4 2 do_render_strip_uncached render.cc 1719 0x73514c6 3 seq_render_strip render.cc 1793 0x7351a81 4 seq_render_strip_stack render.cc 1913 0x7352bb8 5 SEQ_render_give_ibuf render.cc 2015 0x7353fef 6 screen_opengl_render_apply render_opengl.cc 472 0x9e12694 7 screen_opengl_render_anim_step render_opengl.cc 1180 0x9e1ea73 8 screen_opengl_render_modal render_opengl.cc 1238 0x9e1f5f7 9 wm_handler_operator_call wm_event_system.cc 2480 0x42cd7ef 10 wm_handlers_do_intern wm_event_system.cc 3400 0x42ddc51 11 wm_handlers_do wm_event_system.cc 3450 0x42de28a 12 wm_event_do_handlers wm_event_system.cc 4077 0x42e87d4 13 WM_main wm.cc 613 0x4297dc3 14 main creator.cc 594 0x876069 ``` CC @iss
Philipp Oeser changed title from Blender 4.0 crashes when trying to render from VSE to VSE: Blender 4.0 crashes when trying to render scene strips 2023-11-17 11:12:01 +01:00
Member

Note: setting the following will not crash:

image

Note: setting the following will not crash: ![image](/attachments/f0cb2069-1479-426c-966f-534428b09800)
Member

Also CCing @brecht (since he did the review)

Also CCing @brecht (since he did the review)
Author

Note: setting the following will not crash:

image

Seems fair enough for now. Thanks for the temporary solution and quick response!

> Note: setting the following will not crash: > > ![image](/attachments/f0cb2069-1479-426c-966f-534428b09800) Seems fair enough for now. Thanks for the temporary solution and quick response!

I can fix this, but not sure there won't be any side effects. For 4.0, so there reverting b1526dd2c6 would be safe option.

I can fix this, but not sure there won't be any side effects. For 4.0, so there reverting b1526dd2c6 would be safe option.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-23 04:29:20 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114982
No description provided.